Source/WebCore/page/cocoa/ResourceUsageThreadCocoa.mm
@@ -30,6 +30,7 @@
 
 #include <JavaScriptCore/GCActivityCallback.h>
 #include <JavaScriptCore/Heap.h>
+#include <JavaScriptCore/SamplingProfiler.h>
 #include <JavaScriptCore/VM.h>
 #include <mach/mach.h>
 #include <mach/vm_statistics.h>
@@ -157,10 +158,8 @@ static Vector<MachSendRight> threadSendRights()
     return machThreads;
 }
 
-static float cpuUsage()
+static float cpuUsage(Vector<MachSendRight>& machThreads)
 {
-    auto machThreads = threadSendRights();
-
     float usage = 0;
 
     for (auto& machThread : machThreads) {
@@ -205,9 +204,32 @@ static unsigned categoryForVMTag(unsigned tag)
     }
 }
 
+void ResourceUsageThread::platformSaveStateBeforeStarting()
+{
+#if ENABLE(SAMPLING_PROFILER)
+    m_samplingProfilerMachThread = m_vm->samplingProfiler() ? m_vm->samplingProfiler()->machThread() : MACH_PORT_NULL;
+#endif
+}
+
 void ResourceUsageThread::platformCollectCPUData(JSC::VM*, ResourceUsageData& data)
 {
-    data.cpu = cpuUsage();
+    Vector<MachSendRight> threads = threadSendRights();
+    data.cpu = cpuUsage(threads);
+
+    // Remove debugger threads.
+    mach_port_t resourceUsageMachThread = mach_thread_self();
+    threads.removeAllMatching([&] (MachSendRight& thread) {
+        mach_port_t machThread = thread.sendRight();
+        if (machThread == resourceUsageMachThread)
+            return true;
+#if ENABLE(SAMPLING_PROFILER)
+        if (machThread == m_samplingProfilerMachThread)
+            return true;
+#endif
+        return false;
+    });
+
+    data.cpuExcludingDebuggerThreads = cpuUsage(threads);
 }
 
 void ResourceUsageThread::platformCollectMemoryData(JSC::VM* vm, ResourceUsageData& data)
